# JazzClient

./: LICENSE  README.md  README.rst  setup.cfg
rtc/: collab_client.py  log.py  nexus_client.py  rtc_client.py  rtc_objects.py  rtc_web_client.py  settings.conf  settings.py  utils.py  yamlloader.py
rtc2xlsx/: bugs2excel.py  cli.py
