[metadata]
name = rtcclient
version = attr: rtcclient.VERSION
long_description = file: README.rst
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = True
packages = find:
install_requires =
    BeautifulSoup
    click
    cppcheck_junit
    junit_xml
    openpyxl
    PyYAML
    requests
    xmltodict

[options.entry_points]
console_scripts =
    rtc2xlsx = rtc2xlsx.cli:main

[options.package_data]
* = *.xml, *.conf

[options.packages.find]
exclude =
    tests
